# websocket-cpp

./: .gitignore  CMakeLists.txt  README.md  Server.hpp  ServerImpl.hpp  server_fwd.hpp  server_src.hpp  websocket-cpp.cpp  websocket-cpp.hpp  websocket-cpp.sln  websocket-cpp.vcxproj  websocket-cpp.vcxproj.filters
details/: Acceptor.hpp  Connection.hpp  FrameReceiver.hpp  ServerLogic.hpp  base64.hpp  frames.hpp  handshake.hpp  http.hpp  http_parser.hpp  sha1.hpp
tests/: FrameReceiver_tests.cpp  base64_tests.cpp  catch_wrap.hpp  frames_tests.cpp  handshake_tests.cpp  http_parser_tests.cpp  main.cpp  regression_tests.cpp  sha1_tests.cpp
